# bug-fix-kit

./: .gitignore  README.en.md  README.md  pyproject.toml
.codex-plugin/: plugin.json
bug_fix_kit/: __init__.py  cli.py  installer.py  mechanics.py
bug_fix_kit/plugin/skills/bfk-fix/: SKILL.md
bug_fix_kit/plugin/skills/bfk-new/: SKILL.md
docs/: prd.md  release-checklist.md
scripts/: check-release.py  dev-refresh-install.sh  publish-release.py
skills/bfk-capture/: SKILL.md
skills/bfk-diagnose/: SKILL.md
skills/bfk-fix/: SKILL.md
skills/bfk-fix-plan/: SKILL.md
skills/bfk-init/: SKILL.md
skills/bfk-locate/: SKILL.md
skills/bfk-new/: SKILL.md
skills/bfk-probe/: SKILL.md
skills/bfk-run/: SKILL.md
src/bug_fix_kit/: __init__.py  cli.py  contract.py  installer.py  internal_commands.py  mechanics.py
src/bug_fix_kit/mechanics/: __init__.py  artifacts.py  capture.py  curl.py  errors.py  fix.py  http.py  locate.py  logs.py  parameters.py  probe.py  runner.py
tests/: test_cli_commands.py  test_installer.py  test_internal_commands.py  test_mechanics.py  test_plugin_contract.py  test_scaffold_contract.py  test_skill_contracts.py
