[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bug-fix-kit"
version = "0.1.0"
description = "Local Codex plugin for repeatable bug reproduction, diagnosis, and fix sessions."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Bryan" }]
keywords = ["codex", "debugging", "bug-reproduction", "codex-skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/hustyichi/bug-fix-kit"
Repository = "https://github.com/hustyichi/bug-fix-kit"
Issues = "https://github.com/hustyichi/bug-fix-kit/issues"

[project.optional-dependencies]
dev = ["pytest>=9.1.1"]
release = ["build>=1.2", "setuptools>=68", "twine>=5", "wheel>=0.42"]

[project.scripts]
bfk = "bug_fix_kit.cli:main"

[tool.setuptools.packages.find]
include = ["bug_fix_kit*"]

[tool.setuptools.package-data]
bug_fix_kit = ["plugin/.codex-plugin/*", "plugin/skills/*/SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
