[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "bug-fix-kit"
version = "0.3.0"
description = "Local Codex plugin for repeatable bug capture, root-cause location, and fix sessions."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Bryan" }]
keywords = ["codex", "debugging", "bug-reproduction", "codex-skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/hustyichi/bug-fix-kit"
Repository = "https://github.com/hustyichi/bug-fix-kit"
Issues = "https://github.com/hustyichi/bug-fix-kit/issues"

[project.optional-dependencies]
dev = ["pytest>=9.1.1"]
release = ["build>=1.2", "hatchling>=1.26", "twine>=5", "wheel>=0.42"]

[project.scripts]
bfk = "bug_fix_kit.cli:main"

[tool.hatch.build]
include = [
    "src/bug_fix_kit/**",
    ".codex-plugin/**",
    "skills/**",
    "docs/**",
    "tests/**",
    "scripts/**",
    "README.md",
    "README.en.md",
    "pyproject.toml",
]
exclude = [
    ".omx/**",
    ".bfk/**",
    ".venv/**",
    "build/**",
    "dist/**",
    "*.egg-info/**",
    "__pycache__/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bug_fix_kit"]

[tool.hatch.build.targets.wheel.force-include]
".codex-plugin" = "bug_fix_kit/plugin_payload/bug-fix-kit/.codex-plugin"
"skills" = "bug_fix_kit/plugin_payload/bug-fix-kit/skills"

[tool.hatch.build.targets.sdist]
include = [
    "/src/bug_fix_kit/**",
    "/.codex-plugin/**",
    "/skills/**",
    "/docs/**",
    "/tests/**",
    "/scripts/**",
    "/README.md",
    "/README.en.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
